<resources>
    <string name="app_name">App3</string>
    <string name="address_tv">Adres:</string>
    <string name="information_bt">POBIERZ INFORMACJE</string>
    <string name="file_size_tv">Rozmiar pliku:</string>
    <string name="file_type_tv">Typ pliku:</string>
    <string name="download_file_bt">POBIERZ PLIK</string>
    <string name="downloaded_tv">Pobrano bajtów:</string>
    <string name="address_et">https://cdn.kernel.org/pub/linux/kernel/v5.x/linux-5.4.36.tar.xz</string>
    <string name="powiadomienie_tytul">Pobieranie pliku</string>
</resources>