<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/address_tv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/address_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/address_et"
        app:layout_constraintBaseline_toBaselineOf="@id/address_et"/>
    <EditText
        android:id="@+id/address_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/address_et"
        app:layout_constraintLeft_toRightOf="@id/address_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/download_information_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_et"
        app:layout_constraintBottom_toTopOf="@id/file_size_tv"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/information_bt"/>
    <TextView
        android:id="@+id/file_size_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_size_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/download_information_bt"/>
    <TextView
        android:id="@+id/file_size_value_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@id/download_information_bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/file_size_tv"/>
    <TextView
        android:id="@+id/file_type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/file_size_tv"
        android:text="@string/file_type_tv"/>
    <TextView
        android:id="@+id/file_type_value_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@id/file_size_value_tv"
        app:layout_constraintStart_toEndOf="@id/file_type_tv"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/download_file_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/file_type_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/download_file_bt"/>
    <TextView
        android:id="@+id/downloaded_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/downloaded_tv"
        app:layout_constraintTop_toBottomOf="@id/download_file_bt"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/downloaded_value_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@id/downloaded_tv"
        app:layout_constraintStart_toEndOf="@id/downloaded_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/downloaded_tv"/>
    <ProgressBar
        android:id="@+id/download_pb"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/downloaded_tv"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>